docs(jdk-only): retire 4 of W7-55's 5 bookkeeping records; W6-2 held back
W7-55-record-reconciliation.md section 4 nominated five records as open purely
as bookkeeping and left retirement to the orchestrator. All five re-adjudicated
row by row, not on the headline. Four moved with `git mv` into the internal
retired tree, each with a banner naming what discharged it:

  * W7-4  -- instrument record; deliverable superseded by W7-32/33/36/37/40/42,
            widening and both hazard fixes verified in ShadowDifferentialProbe.
            Its 540-line oracle is now STALE and diffing it manufactures
            divergence -- a reason to retire, not to keep.
  * W7-11 -- 68/0 the day it was written; all four named defects landed. Its
            quiet row (the Unmodifiable* link) was filed as "plausible and not
            yet proven" and was never the mechanism.
  * W7-28 -- the worst status line in the directory. A/B/C landed; D was left
            open with a command nobody ran, so I ran it (see below).
  * W7-32 -- pure measurement; its one prescriptive row discharged by W7-33.
            Successor is W7-42, NOT W7-40 (which is itself superseded).

W7-28 part D settled by measurement rather than reasoning:
`od -An -tx1 -N8` on both bench-tornado class files answers
`ca fe ba be 00 00 00 45` -- minor 0, major 69, neither preview-stamped, so
neither can reach the new arm. W7-55's justification for D cited the reader
gate, which answers a question D never asked; the correction is recorded.

W6-2 is NOT retired. The row that holds it back is one nobody had recorded:
`service_accepts_type` (service_loader.rs:1677) has exactly ONE caller (:1897,
the iterator path). The stream path (:2401-2420) computes `factory_return_type`
and never asks it, so an illegal module-declared factory provider raises
ServiceConfigurationError from iterator() and is quietly handed out by
stream(). 44/44 cannot see it: the fixture's provider() returns a CORRECT
subtype, so only the positive cas